plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.carlos'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
    // Core Starter para Web y Datos
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-validation' // <--- ESTA ES
    // Base de datos (PostgreSQL)
    runtimeOnly 'org.postgresql:postgresql'

    // Herramientas de desarrollo
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Lombok (Configuración completa para Gradle)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation platform('org.testcontainers:testcontainers-bom:2.0.2') //import bom
    testImplementation('org.testcontainers:testcontainers-mysql') //no version specified

}

tasks.named('test') {
	useJUnitPlatform()
}
